Removendo bootstrap-growl

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
     <!-- Bootstrap core JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    {% if page.layout == "title" %}
-    <script src="/node_modules/bootstrap-growl/jquery.bootstrap-growl.min.js"></script>
-    {% endif %}
+    <!--
+       -{% if page.layout == "title" %}
+       -<script src="/node_modules/bootstrap-growl/jquery.bootstrap-growl.min.js"></script>
+       -{% endif %}
+       -->
     <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <div id="fb-root"></div>
