--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,8 +22,8 @@ $font-weight-thin:        100;
 $font-weight-medium:      500;
 $font-weight-bold:        800;
 
-$font-family-serif:       "Joanna Nova", Georgia, "Times New Roman", Times, serif !default;
-$font-family-sans-serif:  "Joanna Sans Nova", "Gill Sans", Verdana, Arial, sans-serif !default;
+$font-family-serif:       "Calendas Plus", Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif:  "Aileron", "Gill Sans", Verdana, Arial, sans-serif !default;
 $font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace !default;
 
 $font-family-base:        $font-family-serif !default;
