--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,192 +1,189 @@
 @font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-Book.eot');
-    src: url('../fonts/JoannaSansNova-Book.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-Book.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-Book.woff') format('woff'),
-        url('../fonts/JoannaSansNova-Book.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-Book.svg#JoannaSansNova-Book') format('svg');
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-Thin-webfont.eot');
+    src: url('../fonts/Aileron-Thin-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-Thin-webfont.woff2') format('woff2'),
+        url('../fonts/Aileron-Thin-webfont.woff') format('woff'),
+        url('../fonts/Aileron-Thin-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-Thin-webfont.svg#aileronthin') format('svg');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-ThinItalic-webfont.eot');
+    src: url('../fonts/Aileron-ThinItalic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-ThinItalic-webfont.woff') format('woff'),
+        url('../fonts/Aileron-ThinItalic-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-ThinItalic-webfont.svg#aileronthin_italic') format('svg');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-Regular-webfont.eot');
+    src: url('../fonts/Aileron-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-Regular-webfont.woff') format('woff'),
+        url('../fonts/Aileron-Regular-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-Regular-webfont.svg#aileronregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-MediumItalic.eot');
-    src: url('../fonts/JoannaNova-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-MediumItalic.woff2') format('woff2'),
-        url('../fonts/JoannaNova-MediumItalic.woff') format('woff'),
-        url('../fonts/JoannaNova-MediumItalic.ttf') format('truetype'),
-        url('../fonts/JoannaNova-MediumItalic.svg#JoannaNova-MediumItalic') format('svg');
-    font-weight: 500;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-MediumItalic.eot');
-    src: url('../fonts/JoannaSansNova-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-MediumItalic.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-MediumItalic.woff') format('woff'),
-        url('../fonts/JoannaSansNova-MediumItalic.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-MediumItalic.svg#JoannaSansNova-MediumItalic') format('svg');
-    font-weight: 500;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-BookItalic.eot');
-    src: url('../fonts/JoannaSansNova-BookItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-BookItalic.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-BookItalic.woff') format('woff'),
-        url('../fonts/JoannaSansNova-BookItalic.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-BookItalic.svg#JoannaSansNova-BookItalic') format('svg');
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-Italic-webfont.eot');
+    src: url('../fonts/Aileron-Italic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-Italic-webfont.woff2') format('woff2'),
+        url('../fonts/Aileron-Italic-webfont.woff') format('woff'),
+        url('../fonts/Aileron-Italic-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-Italic-webfont.svg#aileronitalic') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-ExtraBoldItalic.eot');
-    src: url('../fonts/JoannaNova-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-ExtraBoldItalic.woff2') format('woff2'),
-        url('../fonts/JoannaNova-ExtraBoldItalic.woff') format('woff'),
-        url('../fonts/JoannaNova-ExtraBoldItalic.ttf') format('truetype'),
-        url('../fonts/JoannaNova-ExtraBoldItalic.svg#JoannaNova-ExtraBoldItalic') format('svg');
-    font-weight: 800;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-ExtraBold.eot');
-    src: url('../fonts/JoannaNova-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-ExtraBold.woff2') format('woff2'),
-        url('../fonts/JoannaNova-ExtraBold.woff') format('woff'),
-        url('../fonts/JoannaNova-ExtraBold.ttf') format('truetype'),
-        url('../fonts/JoannaNova-ExtraBold.svg#JoannaNova-ExtraBold') format('svg');
-    font-weight: 800;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-ThinItalic.eot');
-    src: url('../fonts/JoannaSansNova-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-ThinItalic.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-ThinItalic.woff') format('woff'),
-        url('../fonts/JoannaSansNova-ThinItalic.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-ThinItalic.svg#JoannaSansNova-ThinItalic') format('svg');
-    font-weight: 100;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-Medium.eot');
-    src: url('../fonts/JoannaNova-Medium.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-Medium.woff2') format('woff2'),
-        url('../fonts/JoannaNova-Medium.woff') format('woff'),
-        url('../fonts/JoannaNova-Medium.ttf') format('truetype'),
-        url('../fonts/JoannaNova-Medium.svg#JoannaNova-Medium') format('svg');
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-SemiBold.eot');
+    src: url('../fonts/Aileron-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-SemiBold.woff2') format('woff2'),
+        url('../fonts/Aileron-SemiBold.woff') format('woff'),
+        url('../fonts/Aileron-SemiBold.ttf') format('truetype'),
+        url('../fonts/Aileron-SemiBold.svg#aileronsemibold') format('svg');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-Book.eot');
-    src: url('../fonts/JoannaNova-Book.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-Book.woff2') format('woff2'),
-        url('../fonts/JoannaNova-Book.woff') format('woff'),
-        url('../fonts/JoannaNova-Book.ttf') format('truetype'),
-        url('../fonts/JoannaNova-Book.svg#JoannaNova-Book') format('svg');
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-SemiBoldItalic-webfont.eot');
+    src: url('../fonts/Aileron-SemiBoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-SemiBoldItalic-webfont.woff2') format('woff2'),
+        url('../fonts/Aileron-SemiBoldItalic-webfont.woff') format('woff'),
+        url('../fonts/Aileron-SemiBoldItalic-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-SemiBoldItalic-webfont.svg#aileronsemibold_italic') format('svg');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-Black-webfont.eot');
+    src: url('../fonts/Aileron-Black-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-Black-webfont.woff') format('woff'),
+        url('../fonts/Aileron-Black-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-Black-webfont.svg#aileronblack') format('svg');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Aileron';
+    src: url('../fonts/Aileron-BlackItalic-webfont.eot');
+    src: url('../fonts/Aileron-BlackItalic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Aileron-BlackItalic-webfont.woff2') format('woff2'),
+        url('../fonts/Aileron-BlackItalic-webfont.woff') format('woff'),
+        url('../fonts/Aileron-BlackItalic-webfont.ttf') format('truetype'),
+        url('../fonts/Aileron-BlackItalic-webfont.svg#aileronblack_italic') format('svg');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus-webfont.eot');
+    src: url('../fonts/calendas_plus-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus-webfont.svg#calendas_plusregular') format('svg');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_italic-webfont.eot');
+    src: url('../fonts/calendas_plus_italic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_italic-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_italic-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_italic-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_italic-webfont.svg#calendas_plusitalic') format('svg');
+    font-weight: 100;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus-webfont.eot');
+    src: url('../fonts/calendas_plus-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus-webfont.svg#calendas_plusregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-Thin.eot');
-    src: url('../fonts/JoannaSansNova-Thin.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-Thin.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-Thin.woff') format('woff'),
-        url('../fonts/JoannaSansNova-Thin.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-Thin.svg#JoannaSansNova-Thin') format('svg');
-    font-weight: 100;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-ExtraBold.eot');
-    src: url('../fonts/JoannaSansNova-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-ExtraBold.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-ExtraBold.woff') format('woff'),
-        url('../fonts/JoannaSansNova-ExtraBold.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-ExtraBold.svg#JoannaSansNova-ExtraBold') format('svg');
-    font-weight: 800;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-BookItalic.eot');
-    src: url('../fonts/JoannaNova-BookItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-BookItalic.woff2') format('woff2'),
-        url('../fonts/JoannaNova-BookItalic.woff') format('woff'),
-        url('../fonts/JoannaNova-BookItalic.ttf') format('truetype'),
-        url('../fonts/JoannaNova-BookItalic.svg#JoannaNova-BookItalic') format('svg');
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_italic-webfont.eot');
+    src: url('../fonts/calendas_plus_italic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_italic-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_italic-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_italic-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_italic-webfont.svg#calendas_plusitalic') format('svg');
     font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-ThinItalic.eot');
-    src: url('../fonts/JoannaNova-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-ThinItalic.woff2') format('woff2'),
-        url('../fonts/JoannaNova-ThinItalic.woff') format('woff'),
-        url('../fonts/JoannaNova-ThinItalic.ttf') format('truetype'),
-        url('../fonts/JoannaNova-ThinItalic.svg#JoannaNova-ThinItalic') format('svg');
-    font-weight: 100;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-Medium.eot');
-    src: url('../fonts/JoannaSansNova-Medium.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-Medium.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-Medium.woff') format('woff'),
-        url('../fonts/JoannaSansNova-Medium.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-Medium.svg#JoannaSansNova-Medium') format('svg');
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_bold-webfont.eot');
+    src: url('../fonts/calendas_plus_bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_bold-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_bold-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_bold-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_bold-webfont.svg#calendas_plusbold') format('svg');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Joanna Nova';
-    src: url('../fonts/JoannaNova-Thin.eot');
-    src: url('../fonts/JoannaNova-Thin.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaNova-Thin.woff2') format('woff2'),
-        url('../fonts/JoannaNova-Thin.woff') format('woff'),
-        url('../fonts/JoannaNova-Thin.ttf') format('truetype'),
-        url('../fonts/JoannaNova-Thin.svg#JoannaNova-Thin') format('svg');
-    font-weight: 100;
-    font-style: normal;
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_italic-webfont.eot');
+    src: url('../fonts/calendas_plus_italic-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_italic-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_italic-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_italic-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_italic-webfont.svg#calendas_plusitalic') format('svg');
+    font-weight: 500;
+    font-style: italic;
 }
 
 @font-face {
-    font-family: 'Joanna Sans Nova';
-    src: url('../fonts/JoannaSansNova-ExtraBoldItalic.eot');
-    src: url('../fonts/JoannaSansNova-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/JoannaSansNova-ExtraBoldItalic.woff2') format('woff2'),
-        url('../fonts/JoannaSansNova-ExtraBoldItalic.woff') format('woff'),
-        url('../fonts/JoannaSansNova-ExtraBoldItalic.ttf') format('truetype'),
-        url('../fonts/JoannaSansNova-ExtraBoldItalic.svg#JoannaSansNova-ExtraBoldItalic') format('svg');
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_bold-webfont.eot');
+    src: url('../fonts/calendas_plus_bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_bold-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_bold-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_bold-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_bold-webfont.svg#calendas_plusbold') format('svg');
     font-weight: 800;
     font-style: italic;
+}
+
+@font-face {
+    font-family: 'Calendas Plus';
+    src: url('../fonts/calendas_plus_bold-webfont.eot');
+    src: url('../fonts/calendas_plus_bold-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/calendas_plus_bold-webfont.woff2') format('woff2'),
+        url('../fonts/calendas_plus_bold-webfont.woff') format('woff'),
+        url('../fonts/calendas_plus_bold-webfont.ttf') format('truetype'),
+        url('../fonts/calendas_plus_bold-webfont.svg#calendas_plusbold') format('svg');
+    font-weight: 800;
+    font-style: normal;
 }
 
