--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
           <div id="logo-img" class="img-fluid d-inline-block align-middle ml-0 mr-0 px-0 mb-3 mb-lg-0 pb-lg-0 mt-lg-3"></div>
           <div class="h1 d-inline-block align-middle mx-0 px-lg-0 text-uppercase">
             <span class="d-lg-none">
-              Ábaco <small class="muted text-secondary break">Arquitetura&nbsp;&amp; Design&nbsp;Ambiental</small>
+              Ábaco <small class="muted text-secondary break">Arquitetura</small>
             </span>
           </div>
         </a>
