--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
+    <meta name="p:domain_verify" content="9ed9828d2f88645d171f33dc56135652"/>
     <link rel="icon" href="favicon.ico">
     <title>{{ page.title | capitalize }}</title>
     <link rel="stylesheet" href="/assets/css/main.css">
